# AI-powered-phishing-email-detector

./: Procfile  README_Government_Phishing.txt  app.py  government_emails.csv  phishing_detector_government.py  phishing_streamlit_government.py  pyproject.toml
