[project]
name = "ai-powered-phishing-email-detector"
version = "0.1.0"
description = "AI-powered phishing email detector for government users"
readme = "README_Government_Phishing.txt"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0"
]

[project.scripts]
app = "app:main"